# spark-example

./: LICENSE  README.md  main.py  pyproject.toml
datasets/: people.json.txt
