[tool.poetry]
name = "spark-example"
version = "0.1.0"
description = ""
authors = ["Damon Allison <damon@shipt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
